@@ -2,22 +2,25 @@ package link.locutus.discord.commands.manager.v2.impl.pw.commands;
 
 import com.politicsandwar.graphql.model.BBGame;
 import com.ptsmods.mysqlw.query.QueryCondition;
-import com.ptsmods.mysqlw.query.builder.SelectBuilder;
+import de.erichseifert.gral.data.DataTable;
+import de.erichseifert.gral.graphics.Insets2D;
+import de.erichseifert.gral.graphics.Location;
+import de.erichseifert.gral.io.plots.DrawableWriter;
+import de.erichseifert.gral.io.plots.DrawableWriterFactory;
+import de.erichseifert.gral.plots.BarPlot;
+import de.erichseifert.gral.plots.colors.ColorMapper;
 import link.locutus.discord.Locutus;
-import link.locutus.discord.apiv1.enums.AttackType;
-import link.locutus.discord.apiv1.enums.WarType;
+import link.locutus.discord.apiv1.domains.subdomains.DBAttack;
+import link.locutus.discord.apiv1.domains.subdomains.SAllianceContainer;
+import link.locutus.discord.apiv1.enums.*;
+import link.locutus.discord.apiv1.enums.city.building.Building;
 import link.locutus.discord.commands.manager.v2.binding.ValueStore;
-import link.locutus.discord.commands.manager.v2.binding.annotation.Command;
-import link.locutus.discord.commands.manager.v2.binding.annotation.Default;
-import link.locutus.discord.commands.manager.v2.binding.annotation.Me;
-import link.locutus.discord.commands.manager.v2.binding.annotation.Switch;
 import link.locutus.discord.commands.manager.v2.binding.annotation.Timestamp;
+import link.locutus.discord.commands.manager.v2.binding.annotation.*;
 import link.locutus.discord.commands.manager.v2.command.IMessageBuilder;
 import link.locutus.discord.commands.manager.v2.command.IMessageIO;
-import link.locutus.discord.commands.manager.v2.impl.pw.NationFilter;
-import link.locutus.discord.commands.manager.v2.impl.pw.binding.NationAttributeDouble;
 import link.locutus.discord.commands.manager.v2.impl.discord.permission.RolePermission;
-import link.locutus.discord.commands.manager.v2.impl.discord.permission.WhitelistPermission;
+import link.locutus.discord.commands.manager.v2.impl.pw.binding.NationAttributeDouble;
 import link.locutus.discord.commands.manager.v2.impl.pw.filter.NationPlaceholders;
 import link.locutus.discord.commands.rankings.WarCostAB;
 import link.locutus.discord.commands.rankings.builder.*;
@@ -26,65 +29,31 @@ import link.locutus.discord.commands.rankings.table.TimeNumericTable;
 import link.locutus.discord.db.BaseballDB;
 import link.locutus.discord.db.GuildDB;
 import link.locutus.discord.db.entities.*;
-import link.locutus.discord.db.entities.DBAlliance;
 import link.locutus.discord.pnw.NationList;
 import link.locutus.discord.pnw.NationOrAlliance;
 import link.locutus.discord.pnw.SimpleNationList;
 import link.locutus.discord.user.Roles;
-import link.locutus.discord.util.MarkupUtil;
-import link.locutus.discord.util.MathMan;
-import link.locutus.discord.util.StringMan;
-import link.locutus.discord.util.TimeUtil;
-import link.locutus.discord.util.discord.DiscordUtil;
+import link.locutus.discord.util.*;
 import link.locutus.discord.util.sheet.SpreadSheet;
 import link.locutus.discord.util.trade.TradeManager;
-import de.erichseifert.gral.data.DataTable;
-import de.erichseifert.gral.graphics.Insets2D;
-import de.erichseifert.gral.graphics.Location;
-import de.erichseifert.gral.io.plots.DrawableWriter;
-import de.erichseifert.gral.io.plots.DrawableWriterFactory;
-import de.erichseifert.gral.plots.BarPlot;
-import de.erichseifert.gral.plots.colors.ColorMapper;
-import link.locutus.discord.apiv1.domains.subdomains.DBAttack;
-import link.locutus.discord.apiv1.domains.subdomains.SAllianceContainer;
-import link.locutus.discord.apiv1.enums.Continent;
-import link.locutus.discord.apiv1.enums.MilitaryUnit;
-import link.locutus.discord.apiv1.enums.ResourceType;
-import link.locutus.discord.apiv1.enums.city.building.Building;
-import link.locutus.discord.util.PnwUtil;
-import link.locutus.discord.util.RateLimitUtil;
 import net.dv8tion.jda.api.entities.Guild;
-import net.dv8tion.jda.api.entities.Message;
-import net.dv8tion.jda.api.entities.MessageChannel;
 import net.dv8tion.jda.api.entities.User;
 import org.apache.commons.lang3.ClassUtils;
 import org.json.JSONObject;
-import rocker.guild.ia.message;
 
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Font;
-import java.awt.Paint;
+import java.awt.*;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.security.GeneralSecurityException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.function.*;
+import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import static link.locutus.discord.commands.rankings.WarCostRanking.scale;
@@ -93,7 +62,7 @@ public class StatCommands {
 
     @Command(desc = "Rank war costs between two parties")
     public String warCostRanking(@Me IMessageIO io, @Me User author, @Me JSONObject command,
-                                 @Timestamp long timeStart, @Timestamp @Default  Long timeEnd, @Default("*") Set<NationOrAlliance> coalition1, @Default("*") Set<NationOrAlliance> coalition2,
+                                 @Timestamp long timeStart, @Timestamp @Default Long timeEnd, @Default("*") Set<NationOrAlliance> coalition1, @Default("*") Set<NationOrAlliance> coalition2,
                                  @Switch("i") boolean excludeInfra,
                                  @Switch("c") boolean excludeConsumption,
                                  @Switch("l") boolean excludeLoot,
@@ -115,7 +84,7 @@ public class StatCommands {
 
                                  @Switch("r") ResourceType resource,
                                  @Switch("f") boolean uploadFile
-                                 ) {
+    ) {
         if (timeEnd == null) timeEnd = Long.MAX_VALUE;
 
         WarParser parser = WarParser.of(coalition1, coalition2, timeStart, timeEnd)
@@ -123,8 +92,10 @@ public class StatCommands {
                 .allowedWarTypes(allowedWarTypes)
                 .allowedAttackTypes(allowedAttacks);
 
-        if (netProfit && unitKill != null) throw new IllegalArgumentException("The netProfit flag cannot be combined with unitKill");
-        if (netProfit && unitLoss != null) throw new IllegalArgumentException("The netProfit flag cannot be combined with unitKill");
+        if (netProfit && unitKill != null)
+            throw new IllegalArgumentException("The netProfit flag cannot be combined with unitKill.");
+        if (netProfit && unitLoss != null)
+            throw new IllegalArgumentException("The netProfit flag cannot be combined with unitKill.");
 
         int sign = netProfit ? -1 : 1;
         String diffStr = TimeUtil.secToTime(TimeUnit.MILLISECONDS, (Math.min(System.currentTimeMillis(), timeEnd) - timeStart));
@@ -167,7 +138,8 @@ public class StatCommands {
                         double totalVal = 0;
                         Map<ResourceType, Double> losses = attack.getLosses(attacker, !excludeUnits, !excludeInfra, !excludeConsumption, !excludeLoot);
                         for (Map.Entry<ResourceType, Double> entry : losses.entrySet()) {
-                            if (entry.getValue() > 0) totalVal += PnwUtil.convertedTotal(entry.getKey(), entry.getValue());
+                            if (entry.getValue() > 0)
+                                totalVal += PnwUtil.convertedTotal(entry.getKey(), entry.getValue());
                         }
                         return totalVal;
                     }
@@ -177,16 +149,16 @@ public class StatCommands {
         }
 
         GroupedRankBuilder<Integer, DBAttack> nationAllianceGroup = new RankBuilder<>(parser.getAttacks())
-        .group((BiConsumer<DBAttack, GroupedRankBuilder<Integer, DBAttack>>) (attack, map) -> {
-            // Group attacks into attacker and defender
-            if (groupByAlliance) {
-                map.put(wars.get(attack.war_id).attacker_aa, attack);
-                map.put(wars.get(attack.war_id).defender_aa, attack);
-            } else {
-                map.put(attack.attacker_nation_id, attack);
-                map.put(attack.defender_nation_id, attack);
-            }
-        });
+                .group((attack, map) -> {
+                    // Group attacks into attacker and defender
+                    if (groupByAlliance) {
+                        map.put(wars.get(attack.war_id).attacker_aa, attack);
+                        map.put(wars.get(attack.war_id).defender_aa, attack);
+                    } else {
+                        map.put(attack.attacker_nation_id, attack);
+                        map.put(attack.defender_nation_id, attack);
+                    }
+                });
 
         // war
         // nation
@@ -233,26 +205,26 @@ public class StatCommands {
                 .nameKeys(id -> PnwUtil.getName(id, groupByAlliance));
 
         // Embed the rank list
-        
+
         ranks.build(io, command, title, uploadFile);
         return null;
     }
 
     @Command(desc = "War costs stats between two coalitions")
     public String myloot(@Me Guild guild, @Me IMessageIO channel, @Me User author, @Me DBNation nation,
-                           Set<NationOrAlliance> coalition2, @Timestamp long timeStart,
-                           @Default @Timestamp Long timeEnd,
-                           @Switch("u") boolean ignoreUnits,
-                           @Switch("i") boolean ignoreInfra,
-                           @Switch("c") boolean ignoreConsumption,
-                           @Switch("l") boolean ignoreLoot,
+                         Set<NationOrAlliance> coalition2, @Timestamp long timeStart,
+                         @Default @Timestamp Long timeEnd,
+                         @Switch("u") boolean ignoreUnits,
+                         @Switch("i") boolean ignoreInfra,
+                         @Switch("c") boolean ignoreConsumption,
+                         @Switch("l") boolean ignoreLoot,
 
-                           @Switch("l") boolean listWarIds,
-                           @Switch("t") boolean showWarTypes,
+                         @Switch("l") boolean listWarIds,
+                         @Switch("t") boolean showWarTypes,
 
-                           @Switch("w")Set<WarType> allowedWarTypes,
-                           @Switch("s") Set<WarStatus> allowedWarStatus,
-                           @Switch("a")Set<AttackType> allowedAttackTypes) {
+                         @Switch("w") Set<WarType> allowedWarTypes,
+                         @Switch("s") Set<WarStatus> allowedWarStatus,
+                         @Switch("a") Set<AttackType> allowedAttackTypes) {
         return warsCost(guild, channel, author, Collections.singleton(nation), coalition2, timeStart, timeEnd,
                 ignoreUnits, ignoreInfra, ignoreConsumption, ignoreLoot, listWarIds, showWarTypes,
                 allowedWarTypes, allowedWarStatus, allowedAttackTypes);
@@ -266,35 +238,28 @@ public class StatCommands {
                           @Switch("l") boolean ignoreLoot) {
         AttackCost cost = war.toCost();
         if (Roles.ECON.has(author, guild)) {
-               WarCostAB.reimburse(cost, war, guild, channel);
+            WarCostAB.reimburse(cost, war, guild, channel);
         }
         return cost.toString(!ignoreUnits, !ignoreInfra, !ignoreConsumption, !ignoreLoot);
     }
 
-    /**
-     * @param coalition1
-     * @param coalition2
-     * @param timeStart
-     * @param timeEnd
-     * @return
-     */
     @Command(desc = "War costs stats between two coalitions")
     public String warsCost(@Me Guild guild, @Me IMessageIO channel, @Me User author,
-            Set<NationOrAlliance> coalition1, Set<NationOrAlliance> coalition2, @Timestamp long timeStart,
-                          @Default @Timestamp Long timeEnd,
-                          @Switch("u") boolean ignoreUnits,
-                          @Switch("i") boolean ignoreInfra,
-                          @Switch("c") boolean ignoreConsumption,
-                          @Switch("l") boolean ignoreLoot,
+                           Set<NationOrAlliance> coalition1, Set<NationOrAlliance> coalition2, @Timestamp long timeStart,
+                           @Default @Timestamp Long timeEnd,
+                           @Switch("u") boolean ignoreUnits,
+                           @Switch("i") boolean ignoreInfra,
+                           @Switch("c") boolean ignoreConsumption,
+                           @Switch("l") boolean ignoreLoot,
 
-                          @Switch("l") boolean listWarIds,
-                          @Switch("t") boolean showWarTypes,
+                           @Switch("l") boolean listWarIds,
+                           @Switch("t") boolean showWarTypes,
 
-                          @Switch("w")Set<WarType> allowedWarTypes,
-                          @Switch("s") Set<WarStatus> allowedWarStatus,
-                          @Switch("a")Set<AttackType> allowedAttackTypes) {
+                           @Switch("w") Set<WarType> allowedWarTypes,
+                           @Switch("s") Set<WarStatus> allowedWarStatus,
+                           @Switch("a") Set<AttackType> allowedAttackTypes) {
         if (timeEnd == null) timeEnd = Long.MAX_VALUE;
-        WarParser parser = WarParser.of(coalition1, coalition2, timeStart, timeEnd == null ? Long.MAX_VALUE : timeEnd);
+        WarParser parser = WarParser.of(coalition1, coalition2, timeStart, timeEnd);
         // filter wars
         if (allowedWarTypes != null) {
             parser.getWars().entrySet().removeIf(f -> !allowedWarTypes.contains(f.getValue()));
@@ -323,7 +288,7 @@ public class StatCommands {
             }
             StringBuilder response = new StringBuilder();
             for (Map.Entry<WarType, Integer> entry : byType.entrySet()) {
-                response.append("\n" + entry.getKey() + ": " + entry.getValue());
+                response.append("\n").append(entry.getKey()).append(": ").append(entry.getValue());
             }
             msg.embed("War Types", response.toString());
         }
@@ -331,20 +296,12 @@ public class StatCommands {
             List<DBWar> wars = Locutus.imp().getWarDb().getWarsById(cost.getWarIds());
             Map<CoalitionWarStatus, Integer> byStatus = new HashMap<>();
             for (DBWar war : wars) {
-                CoalitionWarStatus status = null;
-                switch (war.status) {
-                    case ATTACKER_OFFERED_PEACE:
-                    case DEFENDER_OFFERED_PEACE:
-                    case ACTIVE:
-                        status = CoalitionWarStatus.ACTIVE;
-                        break;
-                    case PEACE:
-                        status = CoalitionWarStatus.PEACE;
-                        break;
-                    case EXPIRED:
-                        status = CoalitionWarStatus.EXPIRED;
-                        break;
-                }
+                CoalitionWarStatus status = switch (war.status) {
+                    case ATTACKER_OFFERED_PEACE, DEFENDER_OFFERED_PEACE, ACTIVE -> CoalitionWarStatus.ACTIVE;
+                    case PEACE -> CoalitionWarStatus.PEACE;
+                    case EXPIRED -> CoalitionWarStatus.EXPIRED;
+                    default -> null;
+                };
                 if (status != null) {
                     byStatus.put(status, byStatus.getOrDefault(status, 0) + 1);
                 }
@@ -356,7 +313,7 @@ public class StatCommands {
 
             StringBuilder response = new StringBuilder();
             for (Map.Entry<CoalitionWarStatus, Integer> entry : byStatus.entrySet()) {
-                response.append("\n" + entry.getKey() + ": " + entry.getValue());
+                response.append("\n").append(entry.getKey()).append(": ").append(entry.getValue());
             }
             msg.embed("War Status", response.toString());
         }
@@ -369,12 +326,12 @@ public class StatCommands {
     public String continent(TradeManager manager) {
         StringBuilder response = new StringBuilder();
         for (Continent continent : Continent.values) {
-            List<ResourceType> types = Arrays.asList(ResourceType.values).stream().filter(f -> {
+            List<ResourceType> types = Arrays.stream(ResourceType.values).filter(f -> {
                 Building build = f.getBuilding();
                 return build != null && build.canBuild(continent);
             }).collect(Collectors.toList());
-            response.append(continent.name() + ": (rads=" + MathMan.format(continent.getRadIndex()) + ")\n");
-            response.append(StringMan.join(types, "\n - ") + "\n");
+            response.append(continent.name()).append(": (rads=").append(MathMan.format(continent.getRadIndex())).append(")\n");
+            response.append(StringMan.join(types, "\n - ")).append("\n");
         }
         return response.toString();
     }
@@ -405,9 +362,10 @@ public class StatCommands {
         }
         String title = "Top " + metric + " by alliance";
 
-        RankBuilder<String> named = builder.nameKeys(f -> f.getName());
+        RankBuilder<String> named = builder.nameKeys(DBAlliance::getName);
         named.build(channel, command, title, uploadFile);
     }
+
     @Command(desc = "Rank alliances by a metric over a specified time period")
     public void allianceRankingTime(@Me IMessageIO channel, @Me JSONObject command, Set<DBAlliance> alliances, AllianceMetric metric, @Timestamp long timeStart, @Timestamp long timeEnd, @Switch("r") boolean reverseOrder, @Switch("f") boolean uploadFile) {
         long turnStart = TimeUtil.getTurn(timeStart);
@@ -444,12 +402,7 @@ public class StatCommands {
 
         RankBuilder<String> named;
         if (groupByAlliance) {
-            NumericGroupRankBuilder<Integer, Double> grouped = builder.group(new BiConsumer<Map.Entry<DBNation, Double>, GroupedRankBuilder<Integer, Double>>() {
-                @Override
-                public void accept(Map.Entry<DBNation, Double> entry, GroupedRankBuilder<Integer, Double> builder) {
-                    builder.put(entry.getKey().getAlliance_id(), entry.getValue());
-                }
-            });
+            NumericGroupRankBuilder<Integer, Double> grouped = builder.group((entry, builder1) -> builder1.put(entry.getKey().getAlliance_id(), entry.getValue()));
             SummedMapRankBuilder<Integer, ? extends Number> summed;
             if (total) {
                 summed = grouped.sum();
@@ -477,7 +430,7 @@ public class StatCommands {
         global /= 5;
 
         StringBuilder result = new StringBuilder();
-        result.append("Global: " + MathMan.format(global)).append("rads\n");
+        result.append("Global: ").append(MathMan.format(global)).append("rads\n");
         for (Map.Entry<Continent, Double> entry : radsByCont.entrySet()) {
             Continent continent = entry.getKey();
             Double local = entry.getValue();
@@ -485,9 +438,8 @@ public class StatCommands {
             double modifier = continent.getSeasonModifier();
             modifier *= (1 - (local + global) / 1000d);
 
-            result.append(" - " + continent + ": " + MathMan.format(local))
-                    .append("rads. (" + MathMan.format(modifier * 100) + "% food production)")
-            .append("\n");
+            result.append(" - ").append(continent).append(": ").append(MathMan.format(local)).append("rads. (").append(MathMan.format(modifier * 100)).append("% food production)")
+                    .append("\n");
         }
         return result.toString();
     }
@@ -506,20 +458,15 @@ public class StatCommands {
             CounterStat stat = entry.getValue();
             DBWar war = entry.getKey();
             switch (stat.type) {
-                case ESCALATION:
-                case IS_COUNTER:
-                    countered[stat.isActive ? 1 : 0]++;
-                    continue;
-                case UNCONTESTED:
+                case ESCALATION, IS_COUNTER -> countered[stat.isActive ? 1 : 0]++;
+                case UNCONTESTED -> {
                     if (war.status == WarStatus.ATTACKER_VICTORY) {
                         uncontested[stat.isActive ? 1 : 0]++;
                     } else {
                         counter[stat.isActive ? 1 : 0]++;
                     }
-                    break;
-                case GETS_COUNTERED:
-                    counter[stat.isActive ? 1 : 0]++;
-                    break;
+                }
+                case GETS_COUNTERED -> counter[stat.isActive ? 1 : 0]++;
             }
         }
 
@@ -533,11 +480,10 @@ public class StatCommands {
         if (!Double.isFinite(chanceInactive)) chanceInactive = 0.5;
 
         String title = "% of wars that are countered (" + alliance.getName() + ")";
-        StringBuilder response = new StringBuilder();
-        response.append(MathMan.format(chanceActive * 100) + "% for actives (" + totalActive + " wars)").append('\n');
-        response.append(MathMan.format(chanceInactive * 100) + "% for inactives (" + totalInactive + " wars)");
+        String response = MathMan.format(chanceActive * 100) + "% for actives (" + totalActive + " wars)" + '\n' +
+                MathMan.format(chanceInactive * 100) + "% for inactives (" + totalInactive + " wars)";
 
-        channel.create().embed(title, response.toString()).send();
+        channel.create().embed(title, response).send();
         return null;
     }
 
@@ -603,8 +549,7 @@ public class StatCommands {
             @Override
             public Paint get(Number number) {
                 int column = (number.intValue() / segments);
-                Color color = (column % 2) == 0 ? Color.RED : Color.BLUE;
-                return color;
+                return (column % 2) == 0 ? Color.RED : Color.BLUE;
             }
 
             @Override
@@ -641,10 +586,12 @@ public class StatCommands {
         plot.setInsets(new Insets2D.Double(20.0, 100.0, 40.0, 0.0));
         plot.getTitle().setText("MMR by city count");
 
-        StringBuilder response = new StringBuilder("> Each coalition is grouped by city count and color coded.\n" +
-                "> **RED** = Coalition 1\n" +
-                "> **BLUE** = Coalition 2\n");
-        msg.append(response.toString());
+        String response = """
+                > Each coalition is grouped by city count and color coded.
+                > **RED** = Coalition 1
+                > **BLUE** = Coalition 2
+                """;
+        msg.append(response);
         msg.send();
         return null;
     }
@@ -702,7 +649,7 @@ public class StatCommands {
         }
 
         double[] buffer = new double[2];
-        TimeDualNumericTable<Void> table = new TimeDualNumericTable<Void>("Effective military strength by score range", "score", "strength", "coalition 1", "coalition 2") {
+        TimeDualNumericTable<Void> table = new TimeDualNumericTable<>("Effective military strength by score range", "score", "strength", "coalition 1", "coalition 2") {
             @Override
             public void add(long score, Void ignore) {
                 add(score, coal1StrSpread[(int) score], coal2StrSpread[(int) score]);
@@ -748,7 +695,7 @@ public class StatCommands {
         }
 
         String title = (total ? "Total" : "Average") + " spies by city count";
-        TimeDualNumericTable<Void> table = new TimeDualNumericTable<Void>(title, "cities", "spies", "coalition 1", "coalition 2") {
+        TimeDualNumericTable<Void> table = new TimeDualNumericTable<>(title, "cities", "spies", "coalition 1", "coalition 2") {
             @Override
             public void add(long cities, Void ignore) {
                 add(cities, counts[0][(int) cities], counts[1][(int) cities]);
@@ -808,7 +755,7 @@ public class StatCommands {
             }
         }
 
-        TimeDualNumericTable<Void> table = new TimeDualNumericTable<Void>("Nations by score range", "score", "nations", "coalition 1", "coalition 2") {
+        TimeDualNumericTable<Void> table = new TimeDualNumericTable<>("Nations by score range", "score", "nations", "coalition 1", "coalition 2") {
             @Override
             public void add(long score, Void ignore) {
                 add(score, coal1StrSpread[(int) score], coal2StrSpread[(int) score]);
@@ -868,15 +815,10 @@ public class StatCommands {
 
     @Command(desc = "List the baseball wager inflows for a nation id")
     public String baseBallChallengeInflow(BaseballDB db, @Me IMessageIO channel, @Me JSONObject command, int nationId, @Default("timestamp:0") @Timestamp long dateSince, @Switch("u") boolean uploadFile) {
-        List<BBGame> games = db.getBaseballGames(new Consumer<SelectBuilder>() {
-            @Override
-            public void accept(SelectBuilder f) {
-                f.where(QueryCondition.greater("wager", 0)
-                        .and(QueryCondition.equals("home_nation_id", nationId).or(QueryCondition.equals("away_nation_id", nationId)))
-                        .and(QueryCondition.greater("date", dateSince))
-                );
-            }
-        });
+        List<BBGame> games = db.getBaseballGames(f -> f.where(QueryCondition.greater("wager", 0)
+                .and(QueryCondition.equals("home_nation_id", nationId).or(QueryCondition.equals("away_nation_id", nationId)))
+                .and(QueryCondition.greater("date", dateSince))
+        ));
 
         if (games.isEmpty()) return "No games found";
 
@@ -989,12 +931,14 @@ public class StatCommands {
             }
         }
 
-        if (!victoryByEntity.isEmpty()) new SummedMapRankBuilder<>(victoryByEntity).sort().nameKeys(f -> PnwUtil.getName(f, isAA)).build(channel, command, "Victories");
-        if (!expireByEntity.isEmpty()) new SummedMapRankBuilder<>(expireByEntity).sort().nameKeys(f -> PnwUtil.getName(f, isAA)).build(channel, command, "Expiries");
+        if (!victoryByEntity.isEmpty())
+            new SummedMapRankBuilder<>(victoryByEntity).sort().nameKeys(f -> PnwUtil.getName(f, isAA)).build(channel, command, "Victories");
+        if (!expireByEntity.isEmpty())
+            new SummedMapRankBuilder<>(expireByEntity).sort().nameKeys(f -> PnwUtil.getName(f, isAA)).build(channel, command, "Expiries");
     }
 
     @Command(desc = "Generate a graph of num nation by score between two coalitions")
-    public String mmrTierGraph(@Me GuildDB db, @Me IMessageIO channel, Set<DBNation> coalition1, Set<DBNation> coalition2, @Switch("i") boolean includeInactives, @Switch("i") boolean includeApplicants, @Switch("s") SpreadSheet sheet, @Switch("b") boolean buildings) throws IOException, GeneralSecurityException {
+    public String mmrTierGraph(@Me GuildDB db, @Me IMessageIO channel, Set<DBNation> coalition1, Set<DBNation> coalition2, @Switch("i") boolean includeInactives, @Switch("i") boolean includeApplicants, @Switch("s") SpreadSheet sheet, @Switch("b") boolean buildings) throws IOException {
         coalition1.removeIf(f -> f.getVm_turns() != 0 || (!includeApplicants && f.getPosition() <= 1) || (!includeInactives && f.getActive_m() > 4880));
         coalition2.removeIf(f -> f.getVm_turns() != 0 || (!includeApplicants && f.getPosition() <= 1) || (!includeInactives && f.getActive_m() > 4880));
 
@@ -1087,8 +1031,7 @@ public class StatCommands {
                 @Override
                 public Paint get(Number number) {
                     int column = (number.intValue() / 4);
-                    Color color = (column % 2) == 0 ? Color.decode("#8b0000") : Color.BLUE;
-                    return color;
+                    return (column % 2) == 0 ? Color.decode("#8b0000") : Color.BLUE;
                 }
 
                 @Override
@@ -1122,10 +1065,12 @@ public class StatCommands {
             plot.getTitle().setText("MMR by city count");
             writer.write(plot, baos, 1400, 600);
 
-            StringBuilder response = new StringBuilder("> Each bar is segmented into four sections, from bottom to top: (soldiers, tanks, planes, ships)\n" +
-                    "> Each coalition is grouped by city count and color coded.\n" +
-                    "> **RED** = Coalition 1\n" +
-                    "> **BLUE** = Coalition 2\n");
+            String response = """
+                    > Each bar is segmented into four sections, from bottom to top: (soldiers, tanks, planes, ships)
+                    > Each coalition is grouped by city count and color coded.
+                    > **RED** = Coalition 1
+                    > **BLUE** = Coalition 2
+                    """;
 
             IMessageBuilder msg = channel.create();
             msg.image("img.png", baos.toByteArray());
@@ -1136,7 +1081,7 @@ public class StatCommands {
                 sheet.attach(msg);
             }
 
-            msg.append(response.toString());
+            msg.append(response);
             msg.send();
 
             return null;
@@ -1150,7 +1095,8 @@ public class StatCommands {
         coalition2.getNations().removeIf(f -> f.getVm_turns() != 0 || (!includeApplicants && f.getPosition() <= 1) || (!includeInactives && f.getActive_m() > 4880));
         allNations.addAll(coalition1.getNations());
         allNations.addAll(coalition2.getNations());
-        if (coalition1.getNations().isEmpty() || coalition2.getNations().isEmpty()) throw new IllegalArgumentException("No nations provided");
+        if (coalition1.getNations().isEmpty() || coalition2.getNations().isEmpty())
+            throw new IllegalArgumentException("No nations provided");
         int min = 0;
         int max = 0;
         for (DBNation nation : allNations) max = Math.max(nation.getCities(), max);
@@ -1159,7 +1105,7 @@ public class StatCommands {
         int[] count2 = new int[max + 1];
         for (DBNation nation : coalition1.getNations()) count1[nation.getCities()]++;
         for (DBNation nation : coalition2.getNations()) count2[nation.getCities()]++;
-        TimeDualNumericTable<Void> table = new TimeDualNumericTable<Void>("Nations by city count", "city", "nations", coalition1.getFilter(), coalition2.getFilter()) {
+        TimeDualNumericTable<Void> table = new TimeDualNumericTable<>("Nations by city count", "city", "nations", coalition1.getFilter(), coalition2.getFilter()) {
             @Override
             public void add(long cities, Void ignore) {
                 add(cities, count1[(int) cities], count2[(int) cities]);
@@ -1175,8 +1121,8 @@ public class StatCommands {
     @Command
     public String allianceMetricsCompareByTurn(@Me IMessageIO channel, @Me Guild guild, @Me GuildDB db, AllianceMetric metric, Set<DBAlliance> alliances, @Timestamp long time) throws IOException {
         long turnStart = TimeUtil.getTurn(time);
-        Set<DBAlliance>[] coalitions = alliances.stream().map(f -> Collections.singleton(f)).collect(Collectors.toList()).toArray(new Set[0]);
-        List<String> coalitionNames = alliances.stream().map(f -> f.getName()).collect(Collectors.toList());
+        Set<DBAlliance>[] coalitions = alliances.stream().map(Collections::singleton).toList().toArray(new Set[0]);
+        List<String> coalitionNames = alliances.stream().map(DBAlliance::getName).collect(Collectors.toList());
         TimeNumericTable table = AllianceMetric.generateTable(metric, turnStart, coalitionNames, coalitions);
         table.write(channel);
         return "Done!";
@@ -1190,7 +1136,7 @@ public class StatCommands {
         return "Done!";
     }
 
-    @RolePermission(value = {Roles.ECON, Roles.MILCOM, Roles.FOREIGN_AFFAIRS, Roles.INTERNAL_AFFAIRS}, any=true)
+    @RolePermission(value = {Roles.ECON, Roles.MILCOM, Roles.FOREIGN_AFFAIRS, Roles.INTERNAL_AFFAIRS}, any = true)
     @Command(desc = "Create a nation sheet, grouped by alliance")
     public String allianceNationsSheet(NationPlaceholders placeholders, ValueStore store, @Me IMessageIO channel, @Me User author, @Me Guild guild, @Me GuildDB db, Set<DBNation> nations, List<String> columns,
                                        @Switch("s") SpreadSheet sheet, @Switch("t") boolean useTotal, @Switch("i") boolean includeInactives, @Switch("a") boolean includeApplicants) throws IOException, GeneralSecurityException, IllegalAccessException, InvocationTargetException {
@@ -1223,7 +1169,7 @@ public class StatCommands {
                 if (arg.equalsIgnoreCase("{nations}")) {
                     arg = list.getNations().size() + "";
                 } else if (arg.equalsIgnoreCase("{alliance}")) {
-                        arg = alliance.getName() + "";
+                    arg = alliance.getName() + "";
                 } else {
                     DBNation nation = useTotal ? total : average;
                     if (arg.startsWith("avg:")) {
@@ -1285,22 +1231,23 @@ public class StatCommands {
     @Command
     public String allianceMetricsByTurn(@Me IMessageIO channel, @Me Guild guild, @Me GuildDB db, AllianceMetric metric, Set<DBAlliance> coalition, @Timestamp long time) throws IOException {
         long turnStart = TimeUtil.getTurn(time);
-        List<String> coalitionNames = Arrays.asList(metric.name());
+        List<String> coalitionNames = List.of(metric.name());
         TimeNumericTable table = AllianceMetric.generateTable(metric, turnStart, coalitionNames, coalition);
         table.write(channel);
         return "Done!";
     }
 
     @Command(
-            desc="Transfer sheet of warcost (for each nation) broken down by resource type.\n" +
-                    "Add -c to exclude consumption cost\n" +
-                    "Add -i to exclude infra cost\n" +
-                    "Add -l to exclude loot cost\n" +
-                    "Add -u to exclude unit cost\n" +
-                    "Add -g to include gray inactive nations\n" +
-                    "Add -d to include non fighting defensive wars\n" +
-                    "Add -n to normalize it per city\n" +
-                    "Add -w to normalize it per war"
+            desc = """
+                    Transfer sheet of warcost (for each nation) broken down by resource type.
+                    Add -c to exclude consumption cost
+                    Add -i to exclude infra cost
+                    Add -l to exclude loot cost
+                    Add -u to exclude unit cost
+                    Add -g to include gray inactive nations
+                    Add -d to include non fighting defensive wars
+                    Add -n to normalize it per city
+                    Add -w to normalize it per war"""
     )
     @RolePermission(Roles.MILCOM)
     public String WarCostByResourceSheet(@Me IMessageIO channel, @Me Guild guild, @Me GuildDB db, Set<NationOrAlliance> attackers, Set<NationOrAlliance> defenders, @Timestamp long time,
@@ -1321,17 +1268,14 @@ public class StatCommands {
 
         Map<Integer, DBWar> allWars = new HashMap<>(parser1.getWars());
 
-        Map<DBNation, List<DBWar>> warsByNation = new RankBuilder<>(allWars.values()).group(new BiConsumer<DBWar, GroupedRankBuilder<DBNation, DBWar>>() {
-            @Override
-            public void accept(DBWar war, GroupedRankBuilder<DBNation, DBWar> group) {
-                DBNation attacker = war.getNation(true);
-                DBNation defender = war.getNation(false);
-                if (attacker != null && parser1.getIsPrimary().apply(war)) {
-                    group.put(attacker, war);
-                }
-                if (defender != null && parser1.getIsSecondary().apply(war)) {
-                    group.put(defender, war);
-                }
+        Map<DBNation, List<DBWar>> warsByNation = new RankBuilder<>(allWars.values()).group((BiConsumer<DBWar, GroupedRankBuilder<DBNation, DBWar>>) (war, group) -> {
+            DBNation attacker = war.getNation(true);
+            DBNation defender = war.getNation(false);
+            if (attacker != null && parser1.getIsPrimary().apply(war)) {
+                group.put(attacker, war);
+            }
+            if (defender != null && parser1.getIsSecondary().apply(war)) {
+                group.put(defender, war);
             }
         }).get();
 
@@ -1394,8 +1338,6 @@ public class StatCommands {
                             } else if (includeGray) {
                                 cost = activeCost;
                             }
-                        } else if (enemyAttack) {
-//                            cost = attSuicides;
                         } else {
                             continue;
                         }
@@ -1468,9 +1410,10 @@ public class StatCommands {
     }
 
     @Command(aliases = {"WarCostByAllianceSheet", "WarCostByAASheet", "WarCostByAlliance", "WarCostByAA"},
-            desc = "Warcost (for each alliance) broken down\n" +
-                    "Add -i to include inactives\n" +
-                    "Add -a to include applicants")
+            desc = """
+                    Warcost (for each alliance) broken down
+                    Add -i to include inactives
+                    Add -a to include applicants""")
     @RolePermission(Roles.MILCOM)
     public String WarCostByAllianceSheet(@Me IMessageIO channel, @Me Guild guild, @Me GuildDB db,
                                          Set<DBNation> nationSet,
@@ -1527,12 +1470,7 @@ public class StatCommands {
                 return nat1 == null || nat2 == null || !nationsByAA.containsKey(nat1.getAlliance_id()) || !nationsByAA.containsKey(nat2.getAlliance_id());
             });
 
-            Function<DBAttack, Boolean> isPrimary = new Function<DBAttack, Boolean>() {
-                @Override
-                public Boolean apply(DBAttack attack) {
-                    return Locutus.imp().getNationDB().getNation(attack.attacker_nation_id).getAlliance_id() == aaId;
-                }
-            };
+            Function<DBAttack, Boolean> isPrimary = attack -> Locutus.imp().getNationDB().getNation(attack.attacker_nation_id).getAlliance_id() == aaId;
             warCost.addCost(attacks, isPrimary, f -> !isPrimary.apply(f));
 
             DBAlliance alliance = DBAlliance.getOrCreate(entry.getKey());
@@ -1577,12 +1515,13 @@ public class StatCommands {
         return null;
     }
 
-    @Command(desc = "Warcost (for each nation) broken down by war type.\n" +
-            "Add -c to exclude consumption cost\n" +
-            "Add -i to exclude infra cost\n" +
-            "Add -l to exclude loot cost\n" +
-            "Add -u to exclude unit cost\n" +
-            "Add -n to normalize it per city")
+    @Command(desc = """
+            Warcost (for each nation) broken down by war type.
+            Add -c to exclude consumption cost
+            Add -i to exclude infra cost
+            Add -l to exclude loot cost
+            Add -u to exclude unit cost
+            Add -n to normalize it per city""")
     @RolePermission(Roles.MILCOM)
     public String WarCostSheet(@Me IMessageIO channel, @Me Guild guild, @Me GuildDB db, Set<NationOrAlliance> attackers, Set<NationOrAlliance> defenders, @Timestamp long time,
                                @Switch("c") boolean excludeConsumption,
@@ -1626,20 +1565,11 @@ public class StatCommands {
 
         Map<Integer, DBWar> allWars = new HashMap<>(parser1.getWars());
 
-        Map<Integer, List<DBWar>> warsByNation = new RankBuilder<>(allWars.values()).group(new BiConsumer<DBWar, GroupedRankBuilder<Integer, DBWar>>() {
-            @Override
-            public void accept(DBWar war, GroupedRankBuilder<Integer, DBWar> group) {
-                if (parser1.getIsPrimary().apply(war)) {
-                    group.put(war.attacker_id, war);
-                } else if (parser1.getIsSecondary().apply(war)) {
-                    group.put(war.defender_id, war);
-                }
-//                if (attacker != null && parser2.getIsPrimary().apply(war)) {
-//                    group.put(defender, war);
-//                }
-//                if (attacker != null && parser2.getIsSecondary().apply(war)) {
-//                    group.put(attacker, war);
-//                }
+        Map<Integer, List<DBWar>> warsByNation = new RankBuilder<>(allWars.values()).group((BiConsumer<DBWar, GroupedRankBuilder<Integer, DBWar>>) (war, group) -> {
+            if (parser1.getIsPrimary().apply(war)) {
+                group.put(war.attacker_id, war);
+            } else if (parser1.getIsSecondary().apply(war)) {
+                group.put(war.defender_id, war);
             }
         }).get();
 
@@ -1720,24 +1650,24 @@ public class StatCommands {
             header.set(0, MarkupUtil.sheetUrl(nation.getNation(), nation.getNationUrl()));
 
             header.set(1, attInactiveCost.getNumWars());
-            header.set(2, -total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attInactiveCost,true));
+            header.set(2, -total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attInactiveCost, true));
             header.set(3, attInactiveCost.getNumWars() == 0 ? 0 : (-total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attInactiveCost, true)) / (double) attInactiveCost.getNumWars());
 
             header.set(4, defActiveCost.getNumWars());
-            header.set(5, defActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost,true) / defActiveCost.getNumWars());
-            header.set(6, defActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost,false) / defActiveCost.getNumWars());
+            header.set(5, defActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost, true) / defActiveCost.getNumWars());
+            header.set(6, defActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost, false) / defActiveCost.getNumWars());
             double defRatio = (double) header.get(6) / (double) header.get(5);
             header.set(7, defActiveCost.getNumWars() == 0 ? 0 : Double.isFinite(defRatio) ? defRatio : 0);
 
             header.set(8, attActiveCost.getNumWars());
-            header.set(9, attActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost,true) / attActiveCost.getNumWars());
-            header.set(10, attActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost,false) / attActiveCost.getNumWars());
+            header.set(9, attActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost, true) / attActiveCost.getNumWars());
+            header.set(10, attActiveCost.getNumWars() == 0 ? 0 : total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost, false) / attActiveCost.getNumWars());
             double attRatio = (double) header.get(10) / (double) header.get(9);
             header.set(11, attActiveCost.getNumWars() == 0 ? 0 : Double.isFinite(attRatio) ? attRatio : 0);
 
             int numTotal = defActiveCost.getNumWars() + attActiveCost.getNumWars();
-            double lossTotal = total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost,true) + total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost,true);
-            double dmgTotal = total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost,false) + total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost,false);
+            double lossTotal = total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost, true) + total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost, true);
+            double dmgTotal = total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, defActiveCost, false) + total(!excludeConsumption, !excludeInfra, !excludeLoot, !excludeUnitCost, normalizePerCity, nation, attActiveCost, false);
             header.set(12, numTotal);
             header.set(13, numTotal == 0 ? 0 : lossTotal / numTotal);
             header.set(14, numTotal == 0 ? 0 : dmgTotal / numTotal);
